# GLASS

./: .gitignore  C3D.txt  C3D_only.txt  CMakeLists.txt  COVERAGE.md  DOCS.md  GL.txt  GL_only.txt  LICENSE  MINE.txt  Makefile  README.md  TODO.md  cmp.py
Docs/: FOG.md  MISC.md
Examples/: CMakeLists.txt
Examples/BM/: CMakeLists.txt
Examples/BM/Common9/: CMakeLists.txt
Examples/BM/Lenny/: CMakeLists.txt  Main.c
Examples/BM/SimpleTri/: CMakeLists.txt  Main.c  VShader.v.pica
Examples/BM/V2/: CMakeLists.txt
Examples/BM/V2/Lenny/: CMakeLists.txt  Lenny.h
Examples/BM/V2/SimpleTri/: CMakeLists.txt
Examples/CubeMap/: Makefile
Examples/CubeMap/Gfx/: Skybox.t3s
Examples/CubeMap/Source/: Main.c
Examples/DebugMem/: Makefile
Examples/DebugMem/Source/: Debug.c  Main.c
Examples/HOS/: CMakeLists.txt
Examples/HOS/BothScreens/: CMakeLists.txt  Main.c  VShader.v.pica
Examples/HOS/CubeMap/: CMakeLists.txt
Examples/HOS/CubeMap/Source/: Main.c
Examples/HOS/FPSController/: CMakeLists.txt  Main.c
Examples/HOS/GeoShader/: CMakeLists.txt  Program.v.pica
Examples/HOS/Lenny/: CMakeLists.txt  Main.c
Examples/HOS/MipMapFog/: CMakeLists.txt  Main.c  VShader.v.pica
Examples/HOS/MipMapFog/Gfx/: Kitten.t3s
Examples/HOS/MipMapFog/Source/: Main.c
Examples/HOS/MultipleBuf/: CMakeLists.txt  Main.c  VShader.v.pica
Examples/HOS/RenderTexture/: CMakeLists.txt  Main.c
Examples/HOS/SimpleTri/: CMakeLists.txt  Main.c  VShader.v.pica
Examples/HOS/TexturedCube/: CMakeLists.txt
Examples/HOS/TexturedCube/Source/: Main.c  stb_image.c
Examples/HOS/TexturedCubeRaw/: CMakeLists.txt
Examples/HOS/TexturedCubeRaw/Source/: Main.c
Examples/HOS/V2/: CMakeLists.txt
Examples/HOS/V2/BothScreens/: CMakeLists.txt  Main.c
Examples/HOS/V2/CubeMap/: CMakeLists.txt
Examples/HOS/V2/FPSController/: CMakeLists.txt  Main.c
Examples/HOS/V2/GeoShader/: Main.c  Program.g.pica
Examples/HOS/V2/Lenny/: CMakeLists.txt  Lenny.c  Main.c
Examples/HOS/V2/MultipleBuf/: CMakeLists.txt
Examples/HOS/V2/RenderTexture/: CMakeLists.txt  Main.c
Examples/HOS/V2/SimpleTri/: CMakeLists.txt
Examples/HOS/V2/TexturedCube/: CMakeLists.txt
Examples/HOS/V2/TexturedCube/Source/: Main.c  stb_image.c
Examples/HOS/V2/WideMode3D/: CMakeLists.txt  Main.c
Examples/HOS/WideMode3D/: CMakeLists.txt  Main.c  VShader.v.pica
Examples/Lenny/Source/: Lenny.c  Lenny.h  Main.c
Examples/MultipleBuf/Source/: Main.c
Examples/SimpleTri/: CMakeLists.txt  Makefile
Examples/SimpleTri/Source/: Main.c  Vshader.v.pica
Examples/TexturedCube/: Makefile
Examples/TexturedCube/Gfx/: Kitten.t3s
Examples/TexturedCube/Source/: Main.c
Examples/TexturedCubeRaw/: Makefile
Examples/TexturedCubeRaw/Source/: Main.c  stb_image.c
Examples/ToonShading/Source/: Main.c  Teapot.c  Teapot.h
Include/: GLASS.h
Include/GLASS/: BM.h  CommonAPI.h  Defs.h  Tex3DS.h
Include/GLES/: gl.h  gl2.h
Source/: Attribs.c  Buffers.c  CMakeLists.txt  Combiners.c  Constants.h  Context.c  Context.h  Effects.c  Extensions.c  Framebuffer.c  GLASS.c  GPU.c  GPU.h  GX.c  GX.h  Memory.c  Memory.h  Rendering.c  Shaders.c  State.c  Tex3DS.c  Texture.c  Types.c  Types.h  Uniforms.c  Utility.c  Utility.h
Source/Base/: BMCompat.h  Constants.h  Context.c  Context.h  Flip.c  Fog.c  Format.c  GLASS.c  GPU.c  GPU.h  GX.c  GX.h  Math.c  Math.h  MathCTRU.c  Memory.c  Pixels.h  Read.c  Read.h  TexManager.c  TexManager.h  Texture.c  Texture.h  Tiling.c  Types.c  Types.h  Utility.c  Utility.h
Source/Common/: Attribs.c  Buffers.c  Combiners.c  Effects.c  Fog.c  Framebuffer.c  Get.c  Get.inc  Rendering.c  Shaders.c  State.c  Tex3DS.c  TexGL.c  Texture.c  Uniforms.c
Source/Platform/: GFX.c  GFX.h  GPU.c  GPU.h  GPUDefs.h  GX.c  GX.h  GXCmds.h  GXQueue.c  GXQueue.h  GX_old.c.bak  Includes.h  Sync.h  Utility.h
Source/Platform/HOS/: GX.c  Memory.c  Utility.c
Source/Texture/: Flip.c  Tex3DS.c  TexAPI.c  TexCommon.c  TexCommon.h  TexGL.c  Texture.c  Texture.h  Tiling.c
Source/V1/: Matrix.c
